Bug 969705 - IonMonkey: Fix truncation of operands for converted comparisons. r=nbp